Populate content and add styling

--- a/index.html
+++ b/index.html
@@ -15,6 +15,47 @@
 
 </head>
 <body>
+    <div class="content-wrapper">
+        <section class="left-section">
+            <h1>Calculate Something!</h1>
+            <p>Caluculate sum stuff, matey. Put a number, do a thing, then put another number then press equals. Bada-bing, Bada-boom, waddayaknow?</p>
+        </section>
+
+        <section class="right-section">
+            <div class="calculator-wrapper">
+                <div class="display-wrapper">
+                    <p class="display-output">Lalala</p>
+                </div>
+                <div class="inputs-wrapper">
+                    <div class="row">
+                        <button class="input number">7</button>
+                        <button class="input number">8</button>
+                        <button class="input number">9</button>
+                        <button class="input operator" id="divide">/</button>
+                    </div>
+                    <div class="row">
+                        <button class="input number">4</button>
+                        <button class="input number">5</button>
+                        <button class="input number">6</button>
+                        <button class="input operator" id="multiply">x</button>
+                    </div>
+                    <div class="row">
+                        <button class="input number">1</button>
+                        <button class="input number">2</button>
+                        <button class="input number">3</button>
+                        <button class="input operator"id="subtract">-</button>
+                    </div>
+                    <div class="row">
+                        <button class="input" id="submit">=</button>
+                        <button class="input number">0</button>
+                        <button class="input" id="decimal">.</button>
+                        <button class="input operator" id="add">+</button>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </div>
     
 </body>
 </html>
