--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
         <section class="right-section">
             <div class="calculator-wrapper">
                 <div class="display-wrapper">
-                    <p class="display-output">Lalala</p>
+                    <p class="display-output">1738</p>
                 </div>
                 <div class="inputs-wrapper">
+                    <div class="row clear-row">
+                        <button class="input" id="clear-button">Clear</button>
+                    </div>
                     <div class="row">
                         <button class="input number">7</button>
                         <button class="input number">8</button>
@@ -37,7 +40,7 @@
                         <button class="input number">4</button>
                         <button class="input number">5</button>
                         <button class="input number">6</button>
-                        <button class="input operator" id="multiply">x</button>
+                        <button class="input operator" id="multiply">X</button>
                     </div>
                     <div class="row">
                         <button class="input number">1</button>
@@ -46,7 +49,7 @@
                         <button class="input operator"id="subtract">-</button>
                     </div>
                     <div class="row">
-                        <button class="input" id="submit">=</button>
+                        <button class="input" id="submit">.</button>
                         <button class="input number">0</button>
                         <button class="input" id="decimal">.</button>
                         <button class="input operator" id="add">+</button>
