Add basic number & button display tether (STILL NEEDS CHECKS)

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <button class="input operator"id="subtract">-</button>
                     </div>
                     <div class="row">
-                        <button class="input" id="submit">.</button>
+                        <button class="input" id="submit">=</button>
                         <button class="input number">0</button>
                         <button class="input" id="decimal">.</button>
                         <button class="input operator" id="add">+</button>
