Halfway done with adding basic display update logic - saving progress

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="right-section">
             <div class="calculator-wrapper">
                 <div class="display-wrapper">
-                    <p class="display-output">1738</p>
+                    <p class="display-output">Try something!</p>
                 </div>
                 <div class="inputs-wrapper">
                     <div class="row clear-row">
