--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <div class="content-wrapper">
         <section class="left-section">
             <h1>Calculate Something!</h1>
-            <p>Caluculate sum stuff, matey. Put a number, do a thing, then put another number then press equals. Bada-bing, Bada-boom, waddayaknow?</p>
+            <p>Caluculate sum stuff, matey. Put a number, do a thing, then put another number then press equals. Bada-bing, Bada-boom, waddayaknow?</p><br />
+            <p>*Can only take inputs up to 13 characters long (for styling reasons)</p>
         </section>
 
         <section class="right-section">
