--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <button class="input number">1</button>
                         <button class="input number">2</button>
                         <button class="input number">3</button>
-                        <button class="input operator"id="subtract">-</button>
+                        <button class="input operator" id="subtract">-</button>
                     </div>
                     <div class="row">
                         <button class="input" id="submit">=</button>
@@ -68,7 +68,9 @@
         </section>
     </div>
     <div class="bottom-area">
-        <svg width="100%" height="100%" viewBox="0 0 100 26" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
+        <a href="https://github.com/jaredGuzman" class="description">Jared Guzman on Github</a>
+        <?xml version="1.0" encoding="UTF-8"?>
+            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100 26" preserveAspectRatio="none">
             <style>
                 path {
                     box-shadow: rgba(50, 50, 93, 0.25) 0px 20px 20px -12px inset, rgba(0, 0, 0, 0.3) 0px 8px 36px -18px inset;
@@ -77,8 +79,8 @@
                     width:100%;
                 }
               </style>
-            <path d="M -4 19 C -4 11 3 2 18 2 C 35 2 36 10 55 10 C 70 10 86 2 100 9 L 100 27 L -4 27 Z" />
-        </svg>
+                <path d="M -4 19 C -4 11 3 2 18 2 C 35 2 36 10 55 10 C 70 10 86 2 100 9 L 100 27 L -4 27 Z"></path>
+            </svg>
 
     </div>
     
