Added link at bottom

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="three-dee"></div>
             <div class="info-wrapper">
                 <h1>Calculate Something!</h1>
-                <p>An exercise in utlizing html, css and javascript. This project was completed in tandem with <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a>, an open source project based bootcamp.</p><br />
+                <p>An exercise in utlizing HTML, CSS and JavaScript. This project was completed in tandem with <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a>, an open source project based bootcamp.</p><br />
                 <ul>
                     <li>Can only take inputs up to 13 characters long!</li>
                     <li>Rounds numbers to the nearest thousandth (eg: 1.125)</li>
@@ -68,7 +68,10 @@
         </section>
     </div>
     <div class="bottom-area">
-        <a href="https://github.com/jaredGuzman" class="description">Jared Guzman on Github</a>
+        <div class="description">
+            <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" />
+            <a href="https://github.com/jaredGuzman">Jared Guzman on Github</a>
+        </div>
         <?xml version="1.0" encoding="UTF-8"?>
             <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100 26" preserveAspectRatio="none">
             <style>
