Fixed for mobile, fixed output loop, added calculation log

--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
 
 </head>
 <body>
+    <div class="error-message-wrapper">
+        <p class="error-message">Hey! You can't do that!</p>
+    </div>
     <div class="content-wrapper">
         <section class="left-section">
             <div class="three-dee"></div>
             <div class="info-wrapper">
                 <h1>Calculate Something!</h1>
                 <p>An exercise in utlizing HTML, CSS and JavaScript. This project was completed in tandem with <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a>, an open source project based bootcamp.</p><br />
+                <h2>Some notes:</h2>
                 <ul>
                     <li>Can only take inputs up to 13 characters long!</li>
                     <li>Rounds numbers to the nearest thousandth (eg: 1.125)</li>
@@ -32,6 +36,7 @@
             <div class="three-dee"></div>
             <div class="calculator-wrapper">
                 <div class="display-wrapper">
+                    <p class="calculation-display-output"></p>
                     <p class="display-output">0</p>
                 </div>
                 <div class="inputs-wrapper">
@@ -69,8 +74,8 @@
     </div>
     <div class="bottom-area">
         <div class="description">
-            <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" />
-            <a href="https://github.com/jaredGuzman">Jared Guzman on Github</a>
+            <a href="https://github.com/jaredGuzman" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" /></a>
+            <a href="https://github.com/jaredGuzman" target="_blank">Made by Jared Guzman</a>
         </div>
         <?xml version="1.0" encoding="UTF-8"?>
             <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100 26" preserveAspectRatio="none">
