--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&family=Source+Code+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
-    <script src="script.js" defer></script>
+    <script src="./js/core.js" defer></script>
+    <script src="./js/math.js" defer></script>
+    <script src="./js/display.js" defer></script>
+    <script src="./js/validate.js" defer></script>
 
 </head>
 <body>
