Add errors and update notes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="error-message-wrapper">
-        <p class="error-message">Hey! You can't do that!</p>
+        <p class="error-message">Just a bit of placeholder here while I style this.</p>
     </div>
     <div class="content-wrapper">
         <section class="left-section">
@@ -31,6 +31,7 @@
                 <ul>
                     <li>Can only take inputs up to 13 characters long!</li>
                     <li>Rounds numbers to the nearest thousandth (eg: 1.125)</li>
+                    <li>Operates from left to right (for now)</li>
                 </ul>
             </div>
         </section>
